# mai_oop_examples_public

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
examples/lection00/: CMakeLists.txt
examples/lection00/01_FirstCppProgram/: main.cpp
examples/lection00/03_DataInputAndOutput/: main.cpp
examples/lection00/04_OutputFormatting/: main.cpp
examples/lection00/06_GTest/: CMakeLists.txt  calculator.cpp  main.cpp
examples/lection00_01/: CMakeLists.txt  README.md
examples/lection00_01/01_FirstCppProgram/: main.cpp
examples/lection00_01/02_StatementsAndFunctions/: main.cpp
examples/lection00_01/03_DataInputAndOutput/: main.cpp
examples/lection00_01/04_OutputFormatting/: main.cpp
examples/lection00_01/05_VariableScope/: main.cpp
examples/lection00_01/06_GTest/: CMakeLists.txt  main.cpp  readme.md
examples/lection00_01/07_IntegerModifiers/: main.cpp
examples/lection00_01/08_FractionalNumbers/: main.cpp
examples/lection00_01/09_Booleans/: main.cpp
examples/lection00_01/10_CharactersAndText/: main.cpp
examples/lection00_01/11_Auto/: main.cpp
examples/lection00_01/12_PrefixPostfixIncrementDecrement/: main.cpp
examples/lection00_01/13_CompoundAssignmentOperators/: main.cpp
examples/lection00_01/14_LogicalOperators/: main.cpp
examples/lection00_01/15_NumericLimits/: main.cpp
examples/lection00_01/16_MathFunctions/: main.cpp
examples/lection00_01/17_Constants/: main.cpp
examples/lection00_01/18_ConstantExpressions/: main.cpp
examples/lection00_01/19_ImplicitDataConversions/: main.cpp
examples/lection00_01/20_ExplicitDataConversions/: main.cpp
examples/lection00_01/21_IfStatements/: main.cpp
examples/lection00_01/22_Switch/: main.cpp
examples/lection00_01/23_ForLoop/: main.cpp
examples/lection00_01/24_ForLoopMultipleDeclarations/: main.cpp
examples/lection00_01/25_CommaOperator/: main.cpp
examples/lection00_01/26_RangeBasedForLoop/: main.cpp
examples/lection00_01/27_WhileLoop/: main.cpp
examples/lection00_01/28_DoWhileLoop/: main.cpp
examples/lection00_01/29_NestedLoops/: main.cpp
examples/lection00_01/30_BreakAndContinue/: main.cpp
examples/lection01/: CMakeLists.txt
examples/lection01/04_CharactersAndText/: main.cpp
examples/lection01/12_ConstantExpressions/: main.cpp
examples/lection01/15_IfStatements/: main.cpp
examples/lection01/16_Switch/: main.cpp
examples/lection01/17_ForLoop/: main.cpp
examples/lection01/21_WhileLoop/: main.cpp
examples/lection01/23_NestedLoops/: main.cpp
examples/lection01/24_BreakAndContinue/: main.cpp
examples/lection02_03/: CMakeLists.txt  README.md
examples/lection02_03/01_DeclaringAndUsingPointers/: main.cpp
examples/lection02_03/02_PointerToChar/: main.cpp
examples/lection02_03/03_ConstPointerAndPointerToConst/: main.cpp
examples/lection02_03/04_PointersAndArrays/: main.cpp
examples/lection02_03/05_PointerArithmetic_Navigation/: main.cpp
examples/lection02_03/06_PointerArithmetic_DistanceBetweenElements/: main.cpp
examples/lection02_03/07_DynamicMemoryAllocation/: main.cpp
examples/lection02_03/08_DanglingPointers/: main.cpp
examples/lection02_03/09_WhenNewFails/: main.cpp
examples/lection02_03/10_MemoryLeaks/: main.cpp
examples/lection02_03/11_DynamicallyAllocatedArrays/: main.cpp
examples/lection02_03/12_DeclaringAndUsingReferences/: main.cpp
examples/lection02_03/13_ComparingPointersAndReferences/: main.cpp
examples/lection02_03/14_ReferencesAndConst/: main.cpp
examples/lection02_03/15_ReferencesWithRangeBasedForLoops/: main.cpp
examples/lection02_03/16_LvalueAndRValue/: main.cpp
examples/lection02_03/17_ReturnError/: main.cpp
examples/lection02_03/18_ComplexException/: main.cpp
examples/lection02_03/19_ExceptionInCatch/: main.cpp
examples/lection02_03/20_ExFast/: main.cpp
examples/lection02_03/21_Noexcept/: main.cpp
examples/lection02_03/22_YourFirstClass/: main.cpp
examples/lection02_03/23_Constructors/: main  main.cpp
examples/lection02_03/24_DefaultedConstructors/: main  main.cpp
examples/lection02_03/25_SettersAndGetters/: main  main.cpp
examples/lection02_03/26_ClassAcrossMultipleFiles/: constants.h  cylinder.cpp  cylinder.h  main  main.cpp
examples/lection02_03/27_ManagingClassObjectsThroughPointers/: cylinder.h  main  main.cpp
examples/lection02_03/28_Destructors/: main  main.cpp
examples/lection02_03/29_OrderOfConstructorDestructorCalls/: main  main.cpp
examples/lection02_03/30_ThisPointer/: main  main.cpp
examples/lection02_03/31_Struct/: main  main.cpp
examples/lection02_03/32_SizeOfClassObjects/: main  main.cpp
examples/lection02_03/33_ConstMember/: main  main.cpp
examples/lection02_03/34_ruleOfFour/: main  main.cpp
examples/lection02_03/lab_02/: CMakeLists.txt  main  main.cpp
examples/lection04_05/: CMakeLists.txt
examples/lection04_05/01_FirstTryOnInheritance/: README.md  main.cpp  person.cpp  person.h  player.cpp  player.h
examples/lection04_05/02_ProtectedMembers/: README.md  main.cpp  person.cpp  person.h  player.cpp  player.h
examples/lection04_05/04_ResurectingMembersBackInContext/: README.md  civilengineer.cpp  civilengineer.h  engineer.cpp  engineer.h  main.cpp  person.cpp  person.h
examples/lection04_05/05_ConstructorsWithInheritance/: README.md  civilengineer.cpp  civilengineer.h  engineer.cpp  engineer.h  main.cpp  person.cpp  person.h
examples/lection04_05/06_InheritingBaseConstructors/: README.md  engineer.cpp  engineer.h  main.cpp  person.cpp  person.h
examples/lection04_05/07_InheritanceAndDestructors/: README.md  civilengineer.cpp  civilengineer.h  engineer.cpp  engineer.h  main.cpp  person.cpp  person.h
examples/lection04_05/08_ReusedSymbolsInInheritance/: README.md  child.cpp  child.h  main.cpp  parent.cpp  parent.h
examples/lection04_05/11_Override/: README.md  oval.h  (+3 more)
examples/lection06_07/: CMakeLists.txt
examples/lection06_07_bak/: CMakeLists.txt
examples/lection08_09/: CMakeLists.txt
examples/lection10_11/: CMakeLists.txt
examples/lection12_13/: CMakeLists.txt  test.cpp
examples/lection14_15/: CMakeLists.txt
(+441 files in other folders)
