cmake_minimum_required(VERSION 3.10)
project(oop_labs)

add_subdirectory(examples/lection00)
add_subdirectory(examples/lection01)
add_subdirectory(examples/lection02_03)
add_subdirectory(examples/lection04_05)
add_subdirectory(examples/lection06_07)
add_subdirectory(examples/lection08_09)
add_subdirectory(examples/lection10_11)
add_subdirectory(examples/lection12_13)