cmake_minimum_required(VERSION 3.10)
project(oop_example_01)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


add_executable(01_FirstCppProgram 01_FirstCppProgram/main.cpp)
add_executable(02_StatementsAndFunctions 02_StatementsAndFunctions/main.cpp)
add_executable(03_DataInputAndOutput 03_DataInputAndOutput/main.cpp)
add_executable(04_OutputFormatting 04_OutputFormatting/main.cpp)
add_executable(05_VariableScope 05_VariableScope/main.cpp)

add_subdirectory(06_GTest)

add_executable(07_IntegerModifiers 07_IntegerModifiers/main.cpp)
add_executable(08_FractionalNumbers 08_FractionalNumbers/main.cpp)
add_executable(09_Booleans 09_Booleans/main.cpp)
add_executable(10_CharactersAndText 10_CharactersAndText/main.cpp)
add_executable(11_Auto 11_Auto/main.cpp)
add_executable(12_PrefixPostfixIncrementDecrement 12_PrefixPostfixIncrementDecrement/main.cpp)
add_executable(13_CompoundAssignmentOperators 13_CompoundAssignmentOperators/main.cpp)
add_executable(14_LogicalOperators 14_LogicalOperators/main.cpp)
add_executable(15_NumericLimits 15_NumericLimits/main.cpp)
add_executable(16_MathFunctions 16_MathFunctions/main.cpp)
add_executable(17_Constants 17_Constants/main.cpp)
add_executable(18_ConstantExpressions 18_ConstantExpressions/main.cpp)
add_executable(19_ImplicitDataConversions 19_ImplicitDataConversions/main.cpp)
add_executable(20_ExplicitDataConversions 20_ExplicitDataConversions/main.cpp)
add_executable(21_IfStatements 21_IfStatements/main.cpp)
add_executable(22_Switch 22_Switch/main.cpp)
add_executable(23_ForLoop 23_ForLoop/main.cpp)
add_executable(24_ForLoopMultipleDeclarations 24_ForLoopMultipleDeclarations/main.cpp)
add_executable(25_CommaOperator 25_CommaOperator/main.cpp)
add_executable(26_RangeBasedForLoop 26_RangeBasedForLoop/main.cpp)
add_executable(27_WhileLoop 27_WhileLoop/main.cpp)
add_executable(28_DoWhileLoop 28_DoWhileLoop/main.cpp)
add_executable(29_NestedLoops 29_NestedLoops/main.cpp)
add_executable(30_BreakAndContinue 30_BreakAndContinue/main.cpp)
