cmake_minimum_required(VERSION 3.10)
project(oop_example_01)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(01_IntegerModifiers 01_IntegerModifiers/main.cpp)
add_executable(02_FractionalNumbers 02_FractionalNumbers/main.cpp)
add_executable(03_Booleans 03_Booleans/main.cpp)
add_executable(04_CharactersAndText 04_CharactersAndText/main.cpp)
add_executable(05_Auto 05_Auto/main.cpp)
add_executable(06_PrefixPostfixIncrementDecrement 06_PrefixPostfixIncrementDecrement/main.cpp)
add_executable(07_CompoundAssignmentOperators 07_CompoundAssignmentOperators/main.cpp)
add_executable(08_LogicalOperators 08_LogicalOperators/main.cpp)
add_executable(09_NumericLimits 09_NumericLimits/main.cpp)
add_executable(10_MathFunctions 10_MathFunctions/main.cpp)
add_executable(11_Constants 11_Constants/main.cpp)
add_executable(12_ConstantExpressions 12_ConstantExpressions/main.cpp)
add_executable(13_ImplicitDataConversions 13_ImplicitDataConversions/main.cpp)
add_executable(14_ExplicitDataConversions 14_ExplicitDataConversions/main.cpp)
add_executable(15_IfStatements 15_IfStatements/main.cpp)
add_executable(16_Switch 16_Switch/main.cpp)
add_executable(17_ForLoop 17_ForLoop/main.cpp)
add_executable(18_ForLoopMultipleDeclarations 18_ForLoopMultipleDeclarations/main.cpp)
add_executable(19_CommaOperator 19_CommaOperator/main.cpp)
add_executable(20_RangeBasedForLoop 20_RangeBasedForLoop/main.cpp)
add_executable(21_WhileLoop 21_WhileLoop/main.cpp)
add_executable(22_DoWhileLoop 22_DoWhileLoop/main.cpp)
add_executable(23_NestedLoops 23_NestedLoops/main.cpp)
add_executable(24_BreakAndContinue 24_BreakAndContinue/main.cpp)
