cmake_minimum_required(VERSION 3.10)
project(oop_example_01)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(01_DeclaringAndUsingPointers 01_DeclaringAndUsingPointers/main.cpp)
add_executable(02_PointerToChar 02_PointerToChar/main.cpp)
add_executable(03_ConstPointerAndPointerToConst 03_ConstPointerAndPointerToConst/main.cpp)
add_executable(04_PointersAndArrays 04_PointersAndArrays/main.cpp)
add_executable(05_PointerArithmetic_Navigation 05_PointerArithmetic_Navigation/main.cpp)
add_executable(06_PointerArithmetic_DistanceBetweenElements 06_PointerArithmetic_DistanceBetweenElements/main.cpp)
add_executable(07_DynamicMemoryAllocation 07_DynamicMemoryAllocation/main.cpp)
add_executable(08_DanglingPointers 08_DanglingPointers/main.cpp)
add_executable(09_WhenNewFails 09_WhenNewFails/main.cpp)
add_executable(10_MemoryLeaks 10_MemoryLeaks/main.cpp)
add_executable(11_DynamicallyAllocatedArrays 11_DynamicallyAllocatedArrays/main.cpp)
add_executable(12_DeclaringAndUsingReferences 12_DeclaringAndUsingReferences/main.cpp)
add_executable(13_ComparingPointersAndReferences 13_ComparingPointersAndReferences/main.cpp)
add_executable(14_ReferencesAndConst 14_ReferencesAndConst/main.cpp)
add_executable(15_ReferencesWithRangeBasedForLoops 15_ReferencesWithRangeBasedForLoops/main.cpp)
add_executable(16_LvalueAndRValue 16_LvalueAndRValue/main.cpp)
add_executable(17_ReturnError 17_ReturnError/main.cpp)
add_executable(18_ComplexException 18_ComplexException/main.cpp)
add_executable(19_ExceptionInCatch 19_ExceptionInCatch/main.cpp)
add_executable(20_ExFast 20_ExFast/main.cpp)
add_executable(21_Noexcept 21_Noexcept/main.cpp)
add_executable(22_YourFirstClass 22_YourFirstClass/main.cpp)
add_executable(23_Constructors 23_Constructors/main.cpp)
add_executable(24_DefaultedConstructors 24_DefaultedConstructors/main.cpp)
add_executable(25_SettersAndGetters 25_SettersAndGetters/main.cpp)
add_executable(26_ClassAcrossMultipleFiles 26_ClassAcrossMultipleFiles/main.cpp 26_ClassAcrossMultipleFiles/cylinder.cpp)
add_executable(27_ManagingClassObjectsThroughPointers 27_ManagingClassObjectsThroughPointers/main.cpp 27_ManagingClassObjectsThroughPointers/cylinder.cpp)
add_executable(28_Destructors 28_Destructors/main.cpp)
add_executable(29_OrderOfConstructorDestructorCalls 29_OrderOfConstructorDestructorCalls/main.cpp)
add_executable(30_ThisPointer 30_ThisPointer/main.cpp)
add_executable(31_Struct 31_Struct/main.cpp)
add_executable(32_SizeOfClassObjects 32_SizeOfClassObjects/main.cpp)
add_executable(33_ConstMember 33_ConstMember/main.cpp)
add_executable(34_ruleOfFour 34_ruleOfFour/main.cpp)

add_subdirectory(lab_02)