cmake_minimum_required(VERSION 3.10)
project(lection_04_05)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(01_FirstTryOnInheritance 01_FirstTryOnInheritance/main.cpp 01_FirstTryOnInheritance/person.cpp 01_FirstTryOnInheritance/player.cpp)
add_executable(02_ProtectedMembers 02_ProtectedMembers/main.cpp 02_ProtectedMembers/player.cpp 02_ProtectedMembers/person.cpp)
add_executable(04_ResurectingMembersBackInContext 04_ResurectingMembersBackInContext/main.cpp 04_ResurectingMembersBackInContext/engineer.cpp 04_ResurectingMembersBackInContext/person.cpp 04_ResurectingMembersBackInContext/civilengineer.cpp)
add_executable(05_ConstructorsWithInheritance 05_ConstructorsWithInheritance/main.cpp 05_ConstructorsWithInheritance/engineer.cpp 05_ConstructorsWithInheritance/person.cpp 05_ConstructorsWithInheritance/civilengineer.cpp)
add_executable(06_InheritingBaseConstructors 06_InheritingBaseConstructors/main.cpp 06_InheritingBaseConstructors/engineer.cpp 06_InheritingBaseConstructors/person.cpp)
add_executable(07_InheritanceAndDestructors 07_InheritanceAndDestructors/main.cpp 07_InheritanceAndDestructors/engineer.cpp 07_InheritanceAndDestructors/person.cpp 07_InheritanceAndDestructors/civilengineer.cpp)
add_executable(08_ReusedSymbolsInInheritance 08_ReusedSymbolsInInheritance/main.cpp 08_ReusedSymbolsInInheritance/parent.cpp 08_ReusedSymbolsInInheritance/child.cpp)
add_executable(09_PolymorphismWithVirtualFunctions 09_PolymorphismWithVirtualFunctions/main.cpp 09_PolymorphismWithVirtualFunctions/shape.cpp 09_PolymorphismWithVirtualFunctions/oval.cpp 09_PolymorphismWithVirtualFunctions/circle.cpp)
add_executable(10_PolymorphicObjectsStoredInCollections 10_PolymorphicObjectsStoredInCollections/main.cpp 10_PolymorphicObjectsStoredInCollections/shape.cpp 10_PolymorphicObjectsStoredInCollections/oval.cpp 10_PolymorphicObjectsStoredInCollections/circle.cpp)
add_executable(11_Override 11_Override/main.cpp 11_Override/shape.cpp 11_Override/oval.cpp 11_Override/circle.cpp)
add_executable(12_InheritanceAndPolymorphismWithStaticMembers 12_InheritanceAndPolymorphismWithStaticMembers/main.cpp 12_InheritanceAndPolymorphismWithStaticMembers/shape.cpp 12_InheritanceAndPolymorphismWithStaticMembers/ellipse.cpp)
add_executable(13_Final 13_Final/main.cpp 13_Final/bulldog.cpp 13_Final/animal.cpp 13_Final/cat.cpp 13_Final/wildcat.cpp 13_Final/pigeon.cpp 13_Final/bird.cpp 13_Final/crow.cpp 13_Final/feline.cpp 13_Final/dog.cpp 13_Final/)
add_executable(16_DynamicCasts 16_DynamicCasts/main.cpp 16_DynamicCasts/animal.cpp 16_DynamicCasts/feline.cpp 16_DynamicCasts/dog.cpp)
add_executable(17_TypeIdOperator 17_TypeIdOperator/main.cpp)
add_executable(18_PureVirtualFunctionsAndAbstractClasses 18_PureVirtualFunctionsAndAbstractClasses/main.cpp 18_PureVirtualFunctionsAndAbstractClasses/circle.cpp 18_PureVirtualFunctionsAndAbstractClasses/rectangle.cpp 18_PureVirtualFunctionsAndAbstractClasses/shape.cpp)
add_executable(21_AdditionOperatorAsMember 21_AdditionOperatorAsMember/main.cpp 21_AdditionOperatorAsMember/point.cpp)
add_executable(22_AdditionOperatorAsNonMember 22_AdditionOperatorAsNonMember/main.cpp 22_AdditionOperatorAsNonMember/point.cpp)
add_executable(23_SubscriptOperatorReading 23_SubscriptOperatorReading/main.cpp 23_SubscriptOperatorReading/point.cpp)
add_executable(24_SubscriptOperatorReadingWritting 24_SubscriptOperatorReadingWritting/main.cpp 24_SubscriptOperatorReadingWritting/point.cpp)
add_executable(25_SubscriptOperatorForCollectionTypes 25_SubscriptOperatorForCollectionTypes/main.cpp 25_SubscriptOperatorForCollectionTypes/scores.cpp)
add_executable(26_StreamInsertionOperator 26_StreamInsertionOperator/main.cpp 26_StreamInsertionOperator/point.cpp)
add_executable(27_StreamExtractionOperator 27_StreamExtractionOperator/main.cpp 27_StreamExtractionOperator/point.cpp)
add_executable(28_OtherArithmeticOperators 28_OtherArithmeticOperators/main.cpp 28_OtherArithmeticOperators/point.cpp)
add_executable(29_CompoundOperators_ReusingOperators 29_CompoundOperators_ReusingOperators/main.cpp 29_CompoundOperators_ReusingOperators/point.cpp)
add_executable(30_CustomTypeConversions 30_CustomTypeConversions/main.cpp 30_CustomTypeConversions/number.cpp 30_CustomTypeConversions/point.cpp)
add_executable(31_ImplicitConversionsWithOverloadedBinaryOperators 31_ImplicitConversionsWithOverloadedBinaryOperators/main.cpp 31_ImplicitConversionsWithOverloadedBinaryOperators/number.cpp)
add_executable(32_UnaryPrefixIncrementOperatorAsMember 32_UnaryPrefixIncrementOperatorAsMember/main.cpp 32_UnaryPrefixIncrementOperatorAsMember/point.cpp)
add_executable(33_UnaryPrefixIncrementOperatorAsNonMember 33_UnaryPrefixIncrementOperatorAsNonMember/main.cpp 33_UnaryPrefixIncrementOperatorAsNonMember/point.cpp)
add_executable(34_UnaryPostfixIncrementOperator 34_UnaryPostfixIncrementOperator/main.cpp 34_UnaryPostfixIncrementOperator/point.cpp)
add_executable(35_UnaryPrefixPostfixDecrementOperator 35_UnaryPrefixPostfixDecrementOperator/main.cpp 35_UnaryPrefixPostfixDecrementOperator/point.cpp)
add_executable(36_CopyAssignmentOperator 36_CopyAssignmentOperator/main.cpp 36_CopyAssignmentOperator/point.cpp)
add_executable(37_CopyAssignmentOperatorForOtherTypes 37_CopyAssignmentOperatorForOtherTypes/main.cpp 37_CopyAssignmentOperatorForOtherTypes/car.cpp 37_CopyAssignmentOperatorForOtherTypes/point.cpp)
add_executable(38_TypeConversionsRecap 38_TypeConversionsRecap/main.cpp 38_TypeConversionsRecap/number.cpp 38_TypeConversionsRecap/point.cpp)
add_executable(39_Functors 39_Functors/main.cpp)
