cmake_minimum_required(VERSION 3.10)

project(lection_06_07)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(01_YourFirstClassTemplate 01_YourFirstClassTemplate/main.cpp 01_YourFirstClassTemplate/boxcontainer.cpp)
add_executable(02_NonTypeTemplateParameters 02_NonTypeTemplateParameters/main.cpp 02_NonTypeTemplateParameters/boxcontainer.cpp)
add_executable(03_DefaultValuesForTemplateParameters 03_DefaultValuesForTemplateParameters/main.cpp 03_DefaultValuesForTemplateParameters/boxcontainer.cpp)
add_executable(04_TemplateSpecializations 04_TemplateSpecializations/main.cpp)
add_executable(05_TemplateSpecializationWithSelectMemberFunctions 05_TemplateSpecializationWithSelectMemberFunctions/main.cpp 05_TemplateSpecializationWithSelectMemberFunctions/boxcontainer.cpp)
add_executable(06_FriendFunctionsForClassTemplates 06_FriendFunctionsForClassTemplates/main.cpp)
add_executable(07_StreamInsertionOperatorForClassTemplates 07_StreamInsertionOperatorForClassTemplates/main.cpp 07_StreamInsertionOperatorForClassTemplates/boxcontainer.cpp)
add_executable(08_ClassTemplatesWithTypeTraitsAndStaticAsserts 08_ClassTemplatesWithTypeTraitsAndStaticAsserts/main.cpp 08_ClassTemplatesWithTypeTraitsAndStaticAsserts/boxcontainer.cpp)