cmake_minimum_required(VERSION 3.10)

project(lection_06_07)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(01_Vector 01_Vector/main.cpp)
add_executable(02_Iterator 02_Iterator/main.cpp)
add_executable(03_UniqueIterator 03_UniqueIterator/main.cpp)
add_executable(04_BackInsert 04_BackInsert/main.cpp)
add_executable(05_BackInsertIterator 05_BackInsertIterator/main.cpp)
add_executable(06_IoStream 06_IoStream/main.cpp)
add_executable(07_ConstIterator 07_ConstIterator/main.cpp)
add_executable(08_Array 08_Array/main.cpp)
add_executable(09_Deque 09_Deque/main.cpp)
add_executable(10_Stack 10_Stack/main.cpp)
add_executable(11_Queue 11_Queue/main.cpp)
add_executable(12_ForwardList 12_ForwardList/main.cpp)
add_executable(13_List 13_List/main.cpp)
add_executable(14_Set 14_Set/main.cpp)
add_executable(15_Map 15_Map/main.cpp)
add_executable(16_Multiset 16_Multiset/main.cpp)
add_executable(17_UnorderedSet 17_UnorderedSet/main.cpp)
add_executable(18_OperatorNew 18_OperatorNew/main.cpp)
add_executable(19_Allocator 19_Allocator/main.cpp)
add_executable(20_SimpleAllocator 20_SimpleAllocator/main.cpp)