cmake_minimum_required(VERSION 3.10)

project(lection_10_11)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(01_Coupling 01_Coupling/main.cpp)
add_executable(02_Coupling 02_Coupling/main.cpp)
add_executable(03_Pimpl 03_Pimpl/main.cpp)
add_executable(04_Pimpl 04_Pimpl/main.cpp 04_Pimpl/PaymentMachine.cpp)
add_executable(05_Pimpl 05_Pimpl/main.cpp 05_Pimpl/PaymentMachine.cpp)
add_executable(06_Tda 06_Tda/main.cpp)
add_executable(07_Cqrs 07_Cqrs/main.cpp)
add_executable(08_Cqrs 08_Cqrs/main.cpp)
add_executable(09_Stp 09_Srp/main.cpp)
add_executable(10_Stp 10_Srp/main.cpp)
add_executable(11_Stp 11_Srp/main.cpp)
add_executable(12_Stp 12_Srp/main.cpp)
add_executable(13_Ocp 13_Ocp/main.cpp)
add_executable(14_Lsp 14_Lsp/main.cpp)
add_executable(15_Lsp 15_Lsp/main.cpp)
add_executable(16_Isp 16_Isp/main.cpp)
add_executable(17_Isp 17_Isp/main.cpp)
add_executable(18_Dip 18_Dip/main.cpp)
add_executable(19_Dip 19_Dip/main.cpp)
add_executable(20_FactoryMethod 20_FactoryMethod/main.cpp)
add_executable(21_AbstractFactory 21_AbstractFactory/main.cpp)
add_executable(22_Builder 22_Builder/main.cpp)
add_executable(23_Visitor 23_Visitor/main.cpp)
add_executable(24_Memento 24_Memento/main.cpp)
add_executable(25_Observer 25_Observer/main.cpp)