cmake_minimum_required(VERSION 3.10)

project(lection_12_13)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(01_ParameterFunction 01_ParameterFunction/main.cpp)
add_executable(02_Lambda 02_Lambda/main.cpp)
add_executable(03_LambdaReturn 03_LambdaReturn/main.cpp)
add_executable(04_LambdaCapture 04_LambdaCapture/main.cpp)
add_executable(05_LambdaGen 05_LambdaGen/main.cpp)
add_executable(06_LambdaVariadic 06_LambdaVariadic/main.cpp)
add_executable(07_LambdaExample 07_LambdaExample/main.cpp)
add_executable(08_Thread 08_Thread/main.cpp)
add_executable(09_ThreadParameter 09_ThreadParameter/main.cpp)
add_executable(10_ScopedThread 10_ScopedThread/main.cpp)
add_executable(11_RaceCondition 11_RaceCondition/main.cpp)
add_executable(12_Mutex 12_Mutex/main.cpp)
add_executable(13_MutexRecursive 13_MutexRecursive/main.cpp)
add_executable(14_LockGuard 14_LockGuard/main.cpp)
add_executable(15_Deadlock 15_Deadlock/main.cpp)
add_executable(16_SharedLock 16_SharedLock/main.cpp)
add_executable(17_DeadLock2 17_DeadLock2/main.cpp)
add_executable(18_Stack 18_Stack/main.cpp)
add_executable(19_PassOut 19_PassOut/main.cpp)
add_executable(20_Future 20_Future/main.cpp)
add_executable(21_Promise 21_Promise/main.cpp)
add_executable(22_Conditional 22_Conditional/main.cpp)
add_executable(23_CustomAsync 23_CustomAsync/main.cpp)
add_executable(24_CoAwait 24_CoAwait/main.cpp)
add_executable(25_CoYield 25_CoYield/main.cpp)
add_executable(26_Multivalue 26_Multivalue/main.cpp)


add_subdirectory(lab_07)